io-tiff: Correctly work with WIN32-IO version of libtiff

If libtiff is compiled with WIN32-IO (which is the default,
unless it's built for Cygwin), it works with HANDLEs, not
C runtime FDs.

https://bugzilla.gnome.org/show_bug.cgi?id=788388